--- a/hatenablog.html
+++ b/hatenablog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>目的</h3>
-    <p><a href="http://www.adventar.org/calendars/135">この記事はjQuery Advent Calender 2013</a>の24日分の記事です。11月からWebServiceを作りはじめて2ヵ月がたとうとしてます。PHPもJavaScriptも使い始めて間がなくその場で考えれる方法で何とか切り抜けてきました。Serviceの方はGoogleMapを使ったものです。GoogleMapAPIから情報を取得するのにjQueryを利用させて貰ってます。APIを利用するときにかなりこまっている点がありました。今日の記事はその解決方法を書きます。もっと上手い方法があるようでしたらコメントを下さい。</p>
+    <p>この記事は<a href="http://www.adventar.org/calendars/135">jQuery Advent Calender 2013</a>の24日分の記事です。11月からWebServiceを作りはじめて2ヵ月がたとうとしてます。PHPもJavaScriptも使い始めて間がなくその場で考えれる方法で何とか切り抜けてきました。Serviceの方はGoogleMapを使ったものです。GoogleMapAPIから情報を取得するのにjQueryを利用させて貰ってます。APIを利用するときにかなりこまっている点がありました。今日の記事はその解決方法を書きます。もっと上手い方法があるようでしたらコメントを下さい。</p>
     <h3>問題</h3>
     <p>GoogleMapAPIを使えば簡単に座標の情報を抜き出すことが出来ます。例えば、クリックした座標を取得(<a href="./example/getlat.html">Example</a>)することもできます。ただ、場所によっては座標を取得出来無いばあいがあります。画像内の赤い丸で託った部分にあるアイコンを押てみてください。</p>
     <p>
@@ -88,7 +88,7 @@
 	});
     });
     </pre>    
-    <a href="">実行例</a>
+    <a href="example/ans.html">実行例</a>
     <h3>謝辞</h3>
     <p>この記事で紹介した方法は<a href="https://twitter.com/sssAlchemy">@sssAlchemy</a>君と見付けたものです。私１人では解決することは困難な問題でした。</p>
     <p>もっといい実装があれば是非教えてください！。</p>
