--- a/example/ans.html
+++ b/example/ans.html
@@ -1,8 +1,20 @@
 <html>
   <head>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+
+    <style type="text/css">
+      #map{
+      width:400px;
+      height:400px;
+      border: 1px solid gray;
+      }
+    </style>
+    <script type="text/javascript" src="ans.js"></script>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div id="map"></div>
+    <div id="result"></div>
+    <div id="lat"></div>
   </body>
 </html>
